Bug 1696885 - Fix block-end padding missing for scrollable <textarea>. r=emilio

We've added block-end padding for block frame in bug 1527949. However,
<textarea> has `overflow-clip-box: content-box` in its inline-axis (See
forms.css), and the existing logic in
nsHTMLScrollFrame::ReflowScrolledFrame(), which inflates the scrolled
frame's overflow areas with its padding, doesn't use the overflow areas
returned in aMetrics. That effectively ignores the efforts in
bug 1527949. Hence this patch.

Differential Revision: https://phabricator.services.mozilla.com/D109464